--- a/webasyst-x/src/main/AndroidManifest.xml
+++ b/webasyst-x/src/main/AndroidManifest.xml
@@ -10,7 +10,8 @@
         android:label="@string/app_name"
         android:name=".WebasystXApplication"
         android:roundIcon="@mipmap/ic_launcher_round"
-        android:theme="@style/Theme.WebasystX">
+        android:theme="@style/Theme.WebasystX"
+        android:usesCleartextTraffic="true">
 
         <activity
             android:label="@string/app_name"
