--- a/webasyst-x/build.gradle
+++ b/webasyst-x/build.gradle
@@ -78,6 +78,8 @@ android {
 dependencies {
     implementation project(':api')
     implementation project(':auth:kt')
+    implementation project(':api:waid')
+    implementation project(':api:webasyst')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation "androidx.core:core-ktx:1.3.1"
